# DAQ_DaughterBoards

./: .cproject  .cproject.bak  .mxproject  .project.bak  CMakeCache.txt  CMakeLists.txt  DAQ_DaughterBoards Debug.launch  DAQ_DaughterBoards.ioc  STM32G474VETX_FLASH.ld
AZURE_RTOS/App/: app_azure_rtos.c  app_azure_rtos_config.h
Core/Inc/: RTE_Components.h  aero_sensors.h  analog_control.h  app_threadx.h  frequency.h  main.h  sr_common.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tim.h
Core/Src/: adc.c  aero_sensors.c  analog_control.c  app_threadx.c  dma.c  fdcan.c  frequency.c  gpio.c  i2c.c  main.c  opamp.c  spi.c  stm32g4xx_it.c  tim.c  tx_initialize_low_level.S  usart.c
Core/User/adc/: analog_control.c  analog_control.h  analog_control_datatypes.h
Core/User/aero/: aero_datatypes.h  aero_sensors.c  aero_sensors.h
Core/User/app/: threadx.c  threadx.h
Core/User/can/: can.c  can.h
Core/User/frequency/: frequency_datatypes.h  frequency_sensors.c  frequency_sensors.h
Core/User/gpio/: exti.c  exti.h
Core/User/strain_gauges/: strain_gauges.c  strain_gauges.h  strain_gauges_datatypes.h
Core/User/ucr_common/: ucr_common.h
Core/ucr_lib/: ucr_dsp_lib.c  ucr_dsp_lib.h
Core/vendor_generated/can_tools/: can.c  can.h  can_api.h  ucr_01.c  ucr_01.h  ucr_01_no_fd.c  ucr_01_no_fd.h
Debug/: DAQ_DaughterBoards.list  makefile  objects.list  sources.mk
Debug/AZURE_RTOS/App/: subdir.mk
Debug/Core/Src/: adc.cyclo  aero_sensors.cyclo  analog_control.cyclo  app_threadx.cyclo  fdcan.cyclo  frequency.cyclo  i2c.cyclo  main.cyclo  opamp.cyclo  spi.cyclo  stm32g4xx_it.cyclo  subdir.mk  tim.cyclo
Debug/Core/User/ADC/: analog_control.cyclo  subdir.mk
Debug/Core/User/Aero/: aero_sensors.cyclo  subdir.mk
Debug/Core/User/app/: subdir.mk  threadx.cyclo
Debug/Core/User/can/: can.cyclo  subdir.mk
Debug/Core/User/frequency/: frequency_sensors.cyclo  subdir.mk
Debug/Core/User/gpio/: exti.cyclo  subdir.mk
Debug/Core/User/strain_gauges/: strain_gauges.cyclo  subdir.mk
Debug/Core/vendor_generated/can_tools/: can.cyclo  subdir.mk  ucr_01.cyclo  ucr_01_no_fd.cyclo
Debug/Core/vendor_generated/ti/: crc.cyclo  subdir.mk
Debug/Drivers/STM32G4xx_HAL_Driver/Src/: subdir.mk
Debug/Middlewares/ST/threadx/common/src/: subdir.mk
Debug/Middlewares/ST/threadx/ports/cortex_m4/gnu/src/: subdir.mk
Middlewares/ST/threadx/common/inc/: tx_api.h
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
